setup: add entrypoint, setup pytest, setup db
Multiple configuration changes. Pytest fixtures setup for DB & App.
Entrypoint setup to start containers in the right order.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,19 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    environment:
-      - FLASK_APP=src/__init__.py
-      - FLASK_ENV=development
+    entrypoint: ['/urs/src/app/entrypoint.sh']
     volumes:
       - .:/urs/src/app
     ports:
       - 5004:5000
+    environment:
+      - FLASK_APP=server/__init__.py
+      - FLASK_ENV=development
+      - APP_SETTINGS=server.config.DevelopmentConfig
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/api_dev
+      - TESTING_DATABASE_URL=postgresql://postgres:postgres@db:5432/api_test
+    depends_on:
+      - db
 
   db:
     build:
