--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,9 @@ services:
       - FLASK_APP=server/__init__.py
       - FLASK_ENV=development
       - APP_SETTINGS=server.config.DevelopmentConfig
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/api_dev
-      - TESTING_DATABASE_URL=postgresql://postgres:postgres@db:5432/api_test
+      - DATABASE_URL=${DATABASE_URL}
+      - TESTING_DATABASE_URL=${TESTING_DATABASE_URL}
+      - IEX_API_TOKEN=${IEX_API_TOKEN}
     depends_on:
       - db
 
@@ -26,5 +27,5 @@ services:
     expose:
       - 5432
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
