--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ psycopg2-binary==2.8.6
 pytest==6.2.4
 flask-jwt-extended==4.3.1
 requests==2.27.1
-gunicorn==20.1.
+gunicorn==20.1.0
+markupsafe==2.0.1
+python-dotenv==0.19.2
+
