feat client: add import config in jsconfig.json & vite.config

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src"
+    "baseUrl": ".",
+    "paths": {
+      "@Common/*": ["./src/modules/common/*"],
+      "@Home/*": ["./src/modules/home/*"]
+    }
   },
-  "include": ["src"],
+  "include": ["./src"],
   "exclude": ["build", "node_modules"]
 }
