--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -1,12 +1,14 @@
 FROM node:17-alpine AS build-step
 WORKDIR /client
 ENV PATH /app/node_modules/.bin:$PATH
+COPY ./client/index.html ./
+COPY ./client/vite.config.js ./
 COPY ./client/package.json ./
 COPY ./client/src ./src
 COPY ./client/public ./public
-RUN npm i
+RUN npm install --production=false
 RUN npm run build
 
 FROM nginx:stable-alpine
-COPY --from=build-step /client/build /urs/share/nginx/html
+COPY --from=build-step /client/dist /urs/share/nginx/html
 COPY deployment/nginx.default.conf /etc/nginx/conf.d/default.conf
