--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -2,10 +2,14 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@Common": ["./src/modules/common/index.js"],
-      "@Home": ["./src/modules/home/index.js"],
-      "@Theming": ["./src/theming/index.js"],
-      "@Images": ["./src/img/index.js"]
+      "@Common/*": ["./src/modules/common/*"],
+      "@Public/*": ["src/modules/public/*"],
+      "@Private/*": ["src/modules/private/*"],
+      "@Home": ["src/modules/public/home"],
+      "@GlobalStyles": ["src/modules/globalStyles/index.js"],
+      "@Images": ["src/modules/img/index.js"],
+      "@Dashboard/*": ["src/modules/private/*"],
+      "@Hooks": ["src/modules/hooks/index.js"]
     }
   },
   "include": ["./src"],
